@@ -1,6 +1,4 @@
-DIST v1.6.2.tar.gz 1102370 SHA256 c9ddb59d14a2cb04d00db07fcd90f3de07f9ae1f2fb0f21783db8e9a242991ed SHA512 ca24b96d270c3b880557baced1aa5a08f9ad11845cdab5e30b2c03381b3bfcad2b7e16310d5672efca75a7cbd1e47079f7c18083322cc56412a16a9968ea1033 WHIRLPOOL 9f8821d96433544b8aba19e813785febc18691ef7f821eb5193f4d6a37cfa2e1090e380389debb54ade4af85232b3b4b27c84e8770fb166e0a4bab160ff2f2de
 DIST v2.0.2.tar.gz 725025 SHA256 949262912bc07f8d1ec72dfa1bbeafb0ed1cea992589e1ee5901e0630c714261 SHA512 99d1946d959c64977a35470b3eb67183c0d5643f51d838809c628ffb12964d5bfcb5b82b32f289a0bfcf70e105014f856ebba8b514b3f1ad00b5c2bb551c5dee WHIRLPOOL fb6b91749c0f0d5ba3df620f012d577eeb37278b70b6b825e1eeff0a5634ee48436d4be80391b7ee2310be47a7b1e0decb2fcfeadc86749e927e8a4ac3a0016f
-EBUILD feedreader-1.6.2-r1.ebuild 1515 SHA256 f80fd4ee78782b7d3b3fadf1905f3445ef8c0a5d8dcc3923e4e3af02daad65ff SHA512 057d2817dc5b68e353c7d36abc895f50b4f185141b676c5d4bd5846a988677ca9cb36b4f575a6cc9620c39c5a17d4948d1c0b692b14e69252805bbda94f190d7 WHIRLPOOL 15883bedc7a70f1fa41c23a01250eb4923d7dc60b3e43eae3d878c4144dcd9479048e7ce0ba57f97c3bb74e01f44591a083eb87b3cf162c1b92dc6a4b0c1066e
 EBUILD feedreader-2.0.2-r1.ebuild 1477 SHA256 a87455151ab4641513124769de44636614b00f9f89bb1e6ec34fe82c8b4e9dd8 SHA512 bcb0af319891c8dc46b49e1679cee4e71f575e413ff9f702be69d44f6e17fce8fe1dc2cd938851044c78232fb4f8c6ec619a39e321a230e89d46101cbb80025f WHIRLPOOL 960ac5bbfe56a178ea4dfc99e25f00dc4bbf7d8db3d774c53769a1842fadb497b01417dfe150cbb3179cd76c0711dcb9c8ef80109caf7c53419618bc41f1f328
-MISC ChangeLog 1432 SHA256 2133bb3607294899161dfcd4cc5d606a395061d38ec36c9f77d700e0c0edaf4c SHA512 587da520c91bfed318751d098571cca2cd6c664d2113c716f3cfd595482130293e10e75ad883c3bd8b6c0824fc43fd64862ce6b2273dcf3b4cdacd75a0486f63 WHIRLPOOL d3bc3dd1cd8210edce87798b4b26a4f7395bc4d398e2cb5d99dbf4da234b1bdd6323c85a6dda22a74e1094bc08a58a4c489b0360af1215b66dc963651a8d43d0
+MISC ChangeLog 1560 SHA256 000b15a0b1a08c49df238ccb3069ca5be148cb149dbcb0876a9305c8bfd9f002 SHA512 90b29a0a47b6acdd4c5b638029412a716f31d90c14fa03bc9cfe3e1d3e79910378c465e71cf1a4306ed75ea5c9c0bbfc9fae50cebe7d1eb0e20c9094e38badf1 WHIRLPOOL 38a114e1633adc094630c2c7ccf75941c54f0dca535b3927ddd0169de84cdfbde2c14bb8fa909359f8f27e5868d29e4ce7235b319802db8f0fbb617be5a4b20b
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
