@@ -1,3 +1,6 @@
+  06 Sep 2017; Manuel Friedli <manuel@fritteli.ch> -feedreader-1.6.2-r1.ebuild:
+  net-news/feedreader:  Prune version 1.6.2-r1
+
 *feedreader-1.6.2-r1 (30 Jul 2017)
 *feedreader-2.0.2-r1 (30 Jul 2017)
 
